--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,9 @@ html, body {
   margin: 0;
   padding: 0;
   /* Ensure full height */
-  height: 100%;
+  height: 80%;
+  overflow: hidden;
+
 }
 
 a {
@@ -74,4 +76,68 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+.stats-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.stat {
+  margin-right: 20px; /* Adjust as needed */
+}
+
+.banner-container {
+  display: flex;
+  justify-content: center; /* Center the content horizontally */
+  align-items: center; /* Center the content vertically */
+}
+
+.banner {
+  width: 50%;
+  height: auto;
+}
+.content {
+  max-height: calc(100vh - 68px);
+}
+
+.stats-container {
+  display: flex;
+  justify-content: center; /* Center the content horizontally */
+  align-items: center; /* Center the content vertically */
+  flex-wrap: wrap;
+}
+
+.stat {
+  margin-right: 20px;
+}
+
+.grid-container {
+  max-height: 480px;
+  overflow: auto;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 20px;
+  padding: 20px;
+  background-color: #242424;
+}
+
+.nft-item {
+  background-color: #545050;
+  border-radius: 8px;
+  overflow: hidden;
+}
+
+.nft-image {
+  width: 100%;
+  height: auto;
+}
+
+.pagination {
+  margin-top: 20px;
+}
+
+.pagination button {
+  margin-right: 5px;
+  cursor: pointer;
 }
