--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
 }
 
 
+
 @font-face {
   font-family: 'Bruno Ace';
   src: url('assets/font/BrunoAce-Regular.ttf') format('truetype');
@@ -38,6 +39,9 @@ html, body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.content {
+}
+
 .loading-container {
   height: 100vh;
   width: 100vw;
@@ -70,35 +74,6 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-/* @media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #12002C;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-} */
-
-.content {
-  height: 100vh;
-}
-
-
-
-.stats-container {
-  display: flex;
-  flex-wrap: wrap;
-  height: 20vh;
-}
-
-.stat {
-  margin-right: 20px; /* Adjust as needed */
-}
-
 .banner-container {
   display: flex;
   justify-content: center; /* Center the content horizontally */
@@ -110,118 +85,7 @@ button:focus-visible {
   height: auto;
 }
 
-.stats-container {
-  display: flex;
-  justify-content: center; /* Center the content horizontally */
-  align-items: center; /* Center the content vertically */
-  flex-wrap: wrap;
-}
-
-.stat {
-  margin-right: 20px;
-}
-
-.grid-container {
-  height: 90vh;
-  margin: 0 5vw 36px 5vw;
-  overflow: auto;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  gap: 20px;
-  background-color: #12002C;
-  scrollbar-width: none;
-  border-radius: 10px;
-  padding: 20px;
-
-}
-
-.grid-container::-webkit-scrollbar {
-  display: none; /* This will hide the scrollbar in WebKit browsers */
-}
-
-.card-container {
-  color: white;
-  line-height: 0;
-  border-radius: 8px;
-}
-
-.nft-image-container {
-  border-radius: 8px 8px 0px 0px;
-  overflow: hidden;
-}
-
-
-.nft-image-solo{
-  height: 500px;
-}
-
-.gradient-border {
-  padding: 1.5px;
-  background-image: linear-gradient(to right, #842481, #ED1E79, #29ABE2, #FBB03B, #F15A24);
-  border-radius: 8px;
-  display: inline-block;
-}
-
-.card-description-container{
-  background-color: rgb(55, 55, 55);
-  border-radius: 0px 0px 8px 8px;
-}
-
-.card-d-container-row {
-  display: flex; /* This makes it a flex container */
-  justify-content: space-between; /* This spreads out the items to the left and right ends */
-  align-items: center; /* This centers the items vertically, you can adjust as needed */
-  font-size: 16px;
-  margin-right: 16px;
-  margin-left: 16px;
-  height: 3em;
-}
-
-.nri-container{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 5px;
-}
-
-.nri-text {
-  background-color: #535bf2; /* Background applied to the text */
-  border-radius: 5px; /* Match the container's border-radius if needed */
-  padding: 0.8em; /* Adjust padding as needed to control background size */
-  color: #FFFFFF;
-}
-
-.nft-price-container {
-  display: flex;
-  align-items: center;
-}
-
-.dfinity-price-image{
-  height: 1em;
-  width: 1em;
-  padding-left: 6px;
-}
-
-.buy-now-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 5px;
-}
-
-.buy-now-text {
-  background-color: #598C58; /* Background applied to the text */
-  border-radius: 5px; /* Match the container's border-radius if needed */
-  padding: 0.8em; /* Adjust padding as needed to control background size */
-  color: #000000;
-}
-
-/* .card-d-container-r2{
-
-} */
-
-
-
+/* 
 .pagination {
   margin-top: 20px;
 }
@@ -229,7 +93,7 @@ button:focus-visible {
 .pagination button {
   margin-right: 5px;
   cursor: pointer;
-}
+} */
 
 
 .nft-item {
@@ -267,34 +131,14 @@ button:focus-visible {
   height: 100%;
 }
 
-.volumen-stat{
-  text-align: center;
-  font-size: 43px;
-}
 
 .h1{
   text-align: center;
 }
 
-
-.stat{
-  margin-right: 36px;
-}
-
-
-.title {
-  font-weight: bold;
-  font-size: 16px; /* Adjust font size for titles */
-}
-
 .value {
   margin-top: 5px; /* Adjust spacing between title and value */
   font-size: 49px; /* Adjust font size for values */
-}
-
-
-.title.p{
-  text-align: left;
 }
 
 .pagination {
