added and updated banner images

--- a/src/components/Page_2/stats.css
+++ b/src/components/Page_2/stats.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    height:5vh;
+    height: 5vh;
     width: auto;
 }
 
@@ -12,8 +12,13 @@
     align-items: center;
 }
 
+.brand-container > * {
+    padding: 0px 0.3em 0px 0.3em;
+}
+
 .brand-logo {
-    height: 5vh; /* Set the height to 5% of the viewport height */
+    margin-top: -20px;
+    height: 12vh; /* Set the height to 5% of the viewport height */
     width: auto; /* Adjust width automatically to maintain aspect ratio */
   }
 
@@ -29,14 +34,14 @@
     justify-content: center;
 }
 
-.volumen-stat > h3 {
+.volume-stat > h3 {
     color: #a9a9a9;
     font-size: 1rem;
     margin: 0;
     padding: 0;
   }
   
-  .volumen-stat > h1 {
+  h1 {
     color: #f0f0f0;
     font-size: 2rem;
     margin: 0;
@@ -46,6 +51,7 @@
   
   .stat {
     text-align: center;
+    padding: 0px 0.5em 0px 0.5em;
   }
   
   .stat .title {
@@ -56,6 +62,7 @@
   }
   
   .stat .value {
+    text-align: left;
     color: #f0f0f0;
     font-size: 1.25rem;
     font-weight: bold;
