--- a/src/components/Page_1/index.css
+++ b/src/components/Page_1/index.css
@@ -1,10 +1,14 @@
 .splash-container {
     height: 100vh;
     width: 100vw;
-    background-image: url("../../assets/PhatsBG2Frame_1920x1080_1.gif"); /* Correct path to your GIF */
+    background-image: url("../../assets/blank_background_desktop.gif"); /* Correct path to your GIF */
     background-size: cover;
     background-position: center; /* Center the background image */
     display: flex; /* Use Flexbox for easier content alignment */
     justify-content: center; /* Center children horizontally */
     align-items: center; /* Center children vertically */
+  }
+
+  .front-banner {
+    width: 80vw;
   }
