--- a/src/index.css
+++ b/src/index.css
@@ -46,7 +46,7 @@ html, body {
 .loading-container {
   height: 100vh;
   width: 100vw;
-  background-image: url("assets/loading_screen.png"); /* Correct path to your GIF */
+  background-image: url("assets/loading-background.png"); /* Correct path to your GIF */
   background-size: cover; /* Cover the entire container */
   background-position: center; /* Center the background image */
   display: flex; /* Use Flexbox for easier content alignment */
