--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@ html, body {
   overflow: auto; /* Prevents scrollbar, use with caution */
   scrollbar-width: none; /* Firefox */
   -ms-overflow-style: none; /* Internet Explorer 10+ */
-  cursor: url('assets/dds.png'), default;
+  cursor: url('assets/dds2.png'), default;
 }
 
 
