--- a/src/components/Layout/Navbar/index.css
+++ b/src/components/Layout/Navbar/index.css
@@ -3,5 +3,10 @@
     display: flex;
     align-items: center;
     padding: 20px;
-    border-bottom: 1px solid rgba(255,255,255,0.5);
+    border-bottom: 2px solid rgba(255,255,255,0.2);
+    background-color: #1f1f1f
+}
+
+.navbar-container h3{
+    font-weight: bold;
 }
