--- a/src/components/Stats/index.css
+++ b/src/components/Stats/index.css
@@ -37,18 +37,11 @@
     justify-content: center;
     align-items: center;
 }
-
-.volume-stat > h3 {
-    color: #a9a9a9;
-    font-size: 1rem;
-    margin: 0;
-    padding: 0;
-  }
   
   h1 {
     color: #f0f0f0;
     font-size: 2rem;
-    margin: 0;
+    margin: 0 0 -15px 0;
     padding: 0;
   }
   
@@ -58,36 +51,37 @@
     padding: 0px 0.5em 0px 0.5em;
   }
   
-  .title {
+  /* .title {
     font-family: 'DoublePixel7';
     text-align: left;
     color: #ffffff;
     font-size: 24px;
     margin: 0;
-  }
+  } */
 
   .title2 {
     font-family: 'HalfBoldPixel7';
     text-align: left;
     color: #ffffff;
-    font-size: 24px;
+    font-size: 1em;
     margin: 0;
   }
 
-  .title3 {
+  /* .title3 {
     font-family: 'Hardpixel';
     text-align: left;
     color: #ffffff;
-    font-size: 24px;
+    font-size: 0.5rem;
     margin: 0;
-  }
+  } */
   
   .stat .value {
+    font-family: 'HalfBoldPixel7';
     text-align: left;
     color: #f0f0f0;
-    font-size: 1.25rem;
+    font-size: 1.6rem;
     font-weight: bold;
-    margin: 0;
+    margin: 8px 0 0 0;
   }
 
   /* Responsive Design */
