update asset btn on the left preview

--- a/src/components/NFTViewer/index.css
+++ b/src/components/NFTViewer/index.css
@@ -64,15 +64,43 @@
     padding: 30px;
     height: calc(100vh - 190px);
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(40px, 40px));
+
+    overflow-y: auto;
     gap: 10px;
+  }
+
+  .filter-preview::-webkit-scrollbar {
+    width: 3px;
+  }
+  
+  .filter-preview::-webkit-scrollbar-thumb {
+    background-color: rgba(255, 255, 255, 0.5);
+    border-radius: 10px;
+  }
+
+  .filter-active{
+    border: 2px solid rgba(255, 255, 255, 0.8) !important;
+    border-radius: 50%;
+    scale: 1.2;
+  }
+  
+  .filter-preview::-webkit-scrollbar-track {
+    background-color: none;
+  }
+
+  .layer-view{
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(30px, 30px));
+    column-gap: 10px;
   }
   
   .filter_asset_container{
     border: 2px solid rgba(255, 255, 255, 0.2);
     display: inline-block;
-    width: 40px;
-    height: 40px
+    width: 30px;
+    height: 30px;
+    overflow: hidden;
   }
   .filter_asset_container:hover{
     border: 3px solid rgba(255, 255, 255, 0.5);
