--- a/src/components/Stats/index.css
+++ b/src/components/Stats/index.css
@@ -41,7 +41,7 @@
   h1 {
     color: #f0f0f0;
     font-size: 2rem;
-    margin: 0 0 -15px 0;
+    margin: 0 0 -15px 10px;
     padding: 0;
   }
   
