--- a/src/components/Stats/index.css
+++ b/src/components/Stats/index.css
@@ -45,14 +45,19 @@
   
 
   .stat {
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: left;
+    /* text-align: center; */
+    /* margin-bottom: -10px; */
   }
   
   .stat .title {
     text-align: left;
     color: #808080;
     font-size: 0.75rem;
-    margin: 0;
+    margin: 0 0 0 0;
   }
   
   .stat .value {
@@ -60,7 +65,7 @@
     color: white;
     font-size: 1.25rem;
     font-weight: bold;
-    margin: 5px 0 0 0;
+    margin: 5px 0 0px 0;
   }
 
   /* Responsive Design */
